@@ -27,7 +27,7 @@
 		<TD align="center">
 			{if $maclist.nodename[maclist] eq ""}
 			<a href="javascript: void(0);" onclick="sendvalue(targetfield,'{$maclist.mac[maclist]}');">
-				{if $smarty.server.REMOTE_ADDR eq $maclist.ip[maclist]}<font color="red"><B>{/if}{$maclist.mac[maclist]}{if $smarty.server.REMOTE_ADDR eq $maclist.ip[maclist]}</B></font>{/if}
+				{if $smarty.server.REMOTE_ADDR eq $maclist.ip[maclist]}<font class="red"><B>{/if}{$maclist.mac[maclist]}{if $smarty.server.REMOTE_ADDR eq $maclist.ip[maclist]}</B></font>{/if}
 			</A>
 			{else}
 			<font class="blend">{$maclist.mac[maclist]}</font>
