@@ -22,7 +22,7 @@
 	</TR>
 	<TR>
 		<TD width="100%" align="center">
-			<TEXTAREA COLS="80" ROWS="30" class="pre" NAME="dbcontent">{$database.content}</TEXTAREA>
+			<TEXTAREA COLS="80" ROWS="30" CLASS="pre" NAME="dbcontent">{$database.content}</TEXTAREA>
 		</TD>
 	</TR>
 	<TR>
