@@ -2,7 +2,7 @@
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
 <table cellpadding="3" width="100%">
-	<TR bgcolor="#CEBD9B">
+	<TR class="dark">
 		<TD class="fleftu" width="96%">
 			<NOBR><IMG src="img/network.gif" ALT=""> <B>{t}Name:{/t}</B><BR><IMG src="img/ip.gif" ALT=""> {t}Network/prefix (interface):{/t}</NOBR>
 		</TD>
