@@ -38,9 +38,9 @@
 		</TD>
 	</TR>
 	{/if}
-	{cycle values="#DFD5BD,#EBE4D6" print=false}		
+	{cycle values="light,lucid" print=false}		
 	{section name=ticket loop=$queue start=$start max=$pagelimit}
-	<TR {if $queue[ticket].state == 2}class="BLEND"{/if} bgcolor="{cycle}" {cycle print=false} onmouseover="setPointer(this, '#CCFFCC')" onmouseout="setPointer(this, '{cycle}')">
+	<TR class="{cycle}{if $queue[ticket].state == 2} blend{/if}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
 		<TD class="fleft" onClick="return self.location.href='?m=rtticketview&id={$queue[ticket].id}';">
 			{if $queue[ticket].state == 0}
 				<IMG src="img/new.gif" alt="">
@@ -54,9 +54,9 @@
 		</TD>
 		<TD NOWRAP onClick="return self.location.href='?m=rtticketview&id={$queue[ticket].id}';">
 			{if $queue[ticket].state == 0}
-				<FONT style="color: red">
+				<FONT class="red">
 			{elseif $queue[ticket].state == 3}
-				<FONT style="color: brown">
+				<FONT class="brown">
 			{/if}
 			<B>{$queue[ticket].id|string_format:"%06d"}</B><BR>
 			{$queue[ticket].createtime|date_format:"%Y/%m/%d %H:%M:%S"}
@@ -64,9 +64,9 @@
 		</TD>
 		<TD onClick="return self.location.href='?m=rtticketview&id={$queue[ticket].id}';">
 			{if $queue[ticket].state == 3}
-				<FONT style="color: brown">
+				<FONT class="brown">
 			{elseif $queue[ticket].state == 0}
-				<FONT style="color: red">
+				<FONT class="red">
 			{/if}
 			<B>{$queue[ticket].subject|escape|truncate:"60":"..."|default:"&nbsp;"}</B><BR>
 			{if $queue[ticket].userid}
@@ -81,9 +81,9 @@
 		</TD>
 		<TD NOWRAP onClick="return self.location.href='?m=rtticketview&id={$queue[ticket].id}';">
 			{if $queue[ticket].state == 3}
-				<FONT style="color: brown">
+				<FONT class="brown">
 			{elseif $queue[ticket].state == 0}
-				<FONT style="color: red">
+				<FONT class="red">
 			{/if}
 			{if $queue[ticket].ownername}{$queue[ticket].ownername}{else}-{/if}<BR>
 			{$queue[ticket].lastmodified|date_format:"%Y/%m/%d %H:%M:%S"|default:"-"}
@@ -97,11 +97,9 @@
 	{sectionelse}
 	<TR>
 		<TD COLSPAN="5" class="flr" ALIGN="center">
-			<BR>
-			<BR>
-			<B>{t}No such tickets matching search criteria.{/t}</B><BR>
-			<BR>
-			<BR>
+			<P>&nbsp;</P>
+			<P><B>{t}No such tickets matching search criteria.{/t}</B></P>
+			<P>&nbsp;</P>
 		</TD>
 	</TR>
 	{/section}
