@@ -49,7 +49,7 @@
 			</TD>
 		    </TR>
 		    <TR class="LIGHT">
-			<TD COLSPAN="4" class="fbt" BGCOLOR="#F4F0EC">
+			<TD COLSPAN="4" class="fbt superlight">
 			    {$message.body|escape|replace:"\n":"<BR>"}
 			</TD>
 		    </TR>
