@@ -141,7 +141,7 @@
 		</TD>
 		<TD WIDTH="99%" CLASS="fright">
 			<TABLE WIDTH="100%" CELLPADDING="5"> 
-			    <TR><TD CLASS="fall" BGCOLOR="#F4F0EC">
+			    <TR><TD CLASS="fall superlight">
 				    {$tariff.description|replace:"\n":"<BR>"}
 			    </TD></TR>
 			</TABLE>
@@ -161,21 +161,20 @@
 	<TR>
 		<TD WIDTH="100%" CLASS="FALL" COLSPAN="2">
 			<TABLE WIDTH="100%" CELLPADDING="2">
-				{cycle values="#DFD5BD,#EBE4D6" print=false}
+				{cycle values="light,lucid" print=false}
 				{section name=l1 loop=$tariff.users max=$tariff.rows}
 				<TR>
 					{section name=l2 loop=$tariff.users start=$smarty.section.l1.index step=$tariff.rows}
-					<TD WIDTH="33%" bgcolor="{cycle}" {cycle print=false} onmouseover="setPointerTD(this, '#CCFFCC')" onmouseout="setPointerTD(this, '{cycle}')" {cycle print=false} onclick="return self.location.href='?m=userinfo&id={$tariff.users[l2].id}'"><IMG SRC="img/user.gif" ALT=""> <A HREF="?m=userinfo&id={$tariff.users[l2].id}">({$tariff.users[l2].id|string_format:"%04d"}) {$tariff.users[l2].username|truncate:50:" ..."} {if $tariff.users[l2].cnt > 1}({$tariff.users[l2].cnt}){/if}</A></TD>
+					<TD WIDTH="33%" class="{cycle}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')" {cycle print=false} onclick="return self.location.href='?m=userinfo&id={$tariff.users[l2].id}'">
+					<IMG SRC="img/user.gif" ALT=""> <A HREF="?m=userinfo&id={$tariff.users[l2].id}">({$tariff.users[l2].id|string_format:"%04d"}) {$tariff.users[l2].username|truncate:50:" ..."} {if $tariff.users[l2].cnt > 1}({$tariff.users[l2].cnt}){/if}</A></TD>
 					{/section}{cycle print=false}
 				</TR>
 				{sectionelse}
 				<TR>
 					<TD WIDTH="100%" ALIGN="CENTER">
-						<BR>
-						<BR>
-						<B>{t}No such customers with that subscription.{/t}</B><BR>
-						<BR>
-						<BR>
+						<P>&nbsp;</P>
+						<P><B>{t}No such customers with that subscription.{/t}</B></P>
+						<P>&nbsp;</P>
 					</TD>
 				</TR>
 				{/section}
