@@ -136,7 +136,7 @@
 			<B>{t}IP addresses instead of nodes names{/t}</B>
 		</TD>
 		<TD CLASS="fright">
-			<INPUT CLASS="box" TYPE="checkbox" NAME="showips" VALUE="1"></INPUT>
+			<INPUT CLASS="box light" TYPE="checkbox" NAME="showips" VALUE="1"></INPUT>
 		</TD>
 	</TR>
 	<TR CLASS="light">
