@@ -177,7 +177,7 @@
 			<TABLE WIDTH="1%" CELLPADDING="5">
 				<TR>
 					<TD CLASS="fall superlight" {tip text="Enter service address (optional)"}>
-						<TEXTAREA NAME="userdata[serviceaddr]" STYLE="background-color: #F4F0EC; border-style: none; border-width: 0pt" COLS="40" ROWS="5">{$userinfo.serviceaddr}</TEXTAREA>
+						<TEXTAREA NAME="userdata[serviceaddr]" COLS="40" ROWS="5">{$userinfo.serviceaddr}</TEXTAREA>
 					</TD>
 				</TR>
 			</TABLE>
@@ -191,7 +191,7 @@
 			<TABLE WIDTH="1%" CELLPADDING="5">
 				<TR>
 					<TD CLASS="fall superlight" {tip text="Enter additional informations (optional)"}>
-						<TEXTAREA NAME="userdata[info]" STYLE="background-color: #F4F0EC; border-style: none; border-width: 0pt" COLS="40" ROWS="5">{$userinfo.info}</TEXTAREA>
+						<TEXTAREA NAME="userdata[info]" COLS="40" ROWS="5">{$userinfo.info}</TEXTAREA>
 					</TD>
 				</TR>
 			</TABLE>
@@ -205,7 +205,7 @@
 			<TABLE WIDTH="1%" CELLPADDING="5">
 				<TR>
 					<TD CLASS="fall superlight" {tip text="Enter warning message contents (optional)"}>
-						<TEXTAREA NAME="userdata[message]" STYLE="background-color: #F4F0EC; border-style: none; border-width: 0pt" COLS="40" ROWS="5">{$userinfo.message}</TEXTAREA>
+						<TEXTAREA NAME="userdata[message]" COLS="40" ROWS="5">{$userinfo.message}</TEXTAREA>
 					</TD>
 				</TR>
 			</TABLE>
